# makeGrayscale

./: .gitignore  CMakeLists.txt  README.md
libs/: .gitkeep
src/: commandline.h  convert.cc  convertor.cc  convertor.h  exception.h  main.cc
tests/: CMakeLists.txt  cmdline_args.cc  load_image.cc  proper_conversion.cc
